# yamc

./: .gitignore  CMakeLists.txt  README.md  yamcConfig.tpl.cmake
include/yamc/: alternate_shared_mutex.hpp  checked_mutex.hpp  checked_shared_mutex.hpp  naive_spin_mutex.hpp  ttas_spin_mutex.hpp
tests/: CMakeLists.txt  barrier_test.cpp  basic_test.cpp  checked_test.cpp  compile_test.cpp  deadlock_test.cpp  dump_typeinfo.cpp  fairness_test.cpp  latch_test.cpp  lock_test.cpp  perf_rwlock.cpp  rwlock_test.cpp  semaphore_test.cpp  spinlock_test.cpp
